Implement EMI transfer.